tests/invalid/DefiniteAssign_Invalid_4.whiley
method f(int|null p) :
    skip

method g() :
    f(x)
